<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SellProductsActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Toolbar-->
        <include layout="@layout/toolbar" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
    </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fromdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_date"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/dateto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_date"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp" />
        </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/datefrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/colorselect"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/todate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/colorselect"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />
    </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/selectedfromdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/selecteddateto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/generatereport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_reports"
            android:textColor="@color/colorselect"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp" />
    </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>